fix: Created Specification, Service and Controller to Company, UnitMeasure and DemandCategory
