# demand-capacity-mgmt-backend/src/main/java/org/eclipse/tractusx/demandcapacitymgmt/demandcapacitymgmtbackend/controllers/DemandCategoryController.java
@@ -1,0 +1,45 @@
+/*
+ * *******************************************************************************
+ *   Copyright (c) 2023 BMW AG
+ *   Copyright (c) 2023 Contributors to the Eclipse Foundation
+ *
+ *   See the NOTICE file(s) distributed with this work for additional
+ *   information regarding copyright ownership.
+ *
+ *   This program and the accompanying materials are made available under the
+ *   terms of the Apache License, Version 2.0 which is available at
+ *   https://www.apache.org/licenses/LICENSE-2.0.
+ *
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ *   WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ *   License for the specific language governing permissions and limitations
+ *   under the License.
+ *
+ *   SPDX-License-Identifier: Apache-2.0
+ *   ********************************************************************************
+ *
+ */
+
+package org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.controllers;
+
+import eclipse.tractusx.demand_capacity_mgmt_specification.api.DemandCategoryApi;
+import eclipse.tractusx.demand_capacity_mgmt_specification.model.DemandCategoryResponse;
+import lombok.AllArgsConstructor;
+import org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.services.DemandCategoryService;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+
+@RestController
+@AllArgsConstructor
+public class DemandCategoryController implements DemandCategoryApi {
+
+    private final DemandCategoryService demandCategoryService;
+    @Override
+    public ResponseEntity<List<DemandCategoryResponse>> getDemandCategory() throws Exception {
+        return ResponseEntity.status(HttpStatus.OK).body(demandCategoryService.getAllDemandCategory());
+    }
+}
